--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -215,3 +215,57 @@
     model: LS424
   os_family: GNU/Linux
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 9; GTKing) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.198 YaBrowser/20.11.0.180.01 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.11.0.180.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Beelink
+    model: GT King
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: TV Bro/1.0 Mozilla/5.0 (Linux; Android 9; BLAUPUNKT 4K Android TV Build/PTO6.200304.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/88.0.4324.93 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: TV Bro
+    version: "1.0"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: Blaupunkt
+    model: 4K Android TV
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; TB-G01) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.80 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 70.0.3538.80
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Savio
+    model: TB-G01
+  os_family: Android
+  browser_family: Chrome
