--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -537,3 +537,8 @@
 - regex: 'JaneStyle_iOS/(\d+[\.\d]+)'
   name: 'JaneStyle'
   version: '$1'
+
+# Odnoklassniki https://play.google.com/store/apps/details?id=ru.ok.android https://apps.apple.com/app/id398465290
+- regex: 'OK(?:Android|iOS)/([\d\.]+)'
+  name: 'Odnoklassniki'
+  version: '$1'
