--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8773,7 +8773,7 @@ AIS:
 
 # Lava (Lavamobiles.com)
 Lava:
-  regex: 'Lava[ _]|LAVAA1|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Pixel V2|Z61_2GB|A97 IPS|A97 2GB PLUS|L[EH]9920(?:[_ ]P)?|L[NEH]9910|LH9810|Ivory(?:S1|S4G)?|A76Plus)(?:[);/ ]|$)'
+  regex: 'Lava[ _]|LAVAA1|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Pixel V2\+?|Z61_2GB|A97 IPS|A97 2GB PLUS|L[EH]9920(?:[_ ]P)?|L[NEH]9910|LH9810|Ivory(?:S1|S4G)?|A76Plus)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -8785,6 +8785,8 @@ Lava:
       model: 'A97 2GB Plus'
     - regex: 'A76Plus(?:[);/ ]|$)'
       model: 'A76 Plus'
+    - regex: 'Pixel V2\+(?:[);/ ]|$)'
+      model: 'Pixel V2 Plus'
     - regex: 'Pixel ?V([12])(?:[);/ ]|$)'
       model: 'Pixel V$1'
     - regex: 'X1 Selfie(?:[);/ ]|$)'
@@ -15459,13 +15461,13 @@ Telego:
 
 # Telenor
 Telenor:
-  regex: '(?<!FBCR/)Telenor|Infinity E5'
+  regex: '(?<!FBCR/)Telenor|(?:Infinity[_ ](?:E5|K))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Telenor[ _]([^;/]+)(?: Build|[;)])'
       model: '$1'
-    - regex: 'Infinity E5'
-      model: 'Infinity E5'
+    - regex: 'Infinity[ _](E5|K)'
+      model: 'Infinity $1'
 
 # Telit
 Telit:
@@ -19200,10 +19202,10 @@ VKworld:
 
 # Mito
 Mito:
-  regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|3[59]|55|180|2[36]0|313|322|33|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|T(?:8|10|35|3[03]0|510|888)|311)(?:[);/ ]|$)'
+  regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|3[59]|55|180|2[36]0|313|322|33|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|T(?:8|10|35|3[03]0|510|888)|311|A37[_ ]Z1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|3[59]|55|180|2[36]0|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|311)(?:[);/ ]|$)'
+    - regex: 'MITO[- _](A(?:1[0678]|19_[12]GB|21|3[59]|55|180|2[36]0|33|322|313|3[136]0|[35]50|6[89]|7[235]|82|[356]0|810|950)|311|A37[_ ]Z1)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'MITO[ _](T(?:8|10|35|3[03]0|510|888))(?:[);/ ]|$)'
       device: 'tablet'
@@ -22003,11 +22005,11 @@ Kyowon:
 
 # LT Mobile or LT Electronics (lt-smartphone.com)
 LT Mobile:
-  regex: '(?:LT-NOTE 10S)'
+  regex: '(?:LT-NOTE 10S|LT NOTE 10M)'
   device: 'smartphone'
   models:
-    - regex: 'LT-NOTE 10S'
-      model: 'Note 10S'
+    - regex: 'LT[- ]NOTE (10[SM])'
+      model: 'Note $1'
 
 # ONYX BOOX (onyx-boox.ru)
 ONYX BOOX:
@@ -22076,3 +22078,9 @@ YUHO:
       model: 'Z8 Plus'
     - regex: 'Z8POCKET'
       model: 'Z8 Pocket'
+
+# STG Telecom (stgtelecom.com)
+STG Telecom:
+  regex: 'STG[ _](A[12] Pro|[AS]1|X[1-3]|S[1-3]0|B10)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
