--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4625,3 +4625,21 @@
     model: TB717G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.4; ICONBIT MATRIX ULTRA Build/ICS.g04ref.20121114) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Safari/537.36
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: IconBIT
+    model: NetTAB Matrix Ultra
+  os_family: Android
+  browser_family: Chrome
