--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15222,6 +15222,8 @@ Tecno Mobile:
       model: 'Phantom 6'
     - regex: 'TECNO[ _]AB7(?:[);/ ]|$)'
       model: 'Phantom 9'
+    - regex: 'TECNO[ _]LC6a(?:[);/ ]|$)'
+      model: 'Pouvoir 3 Air'
     - regex: 'TECNO-W3'
       model: 'W3'
     - regex: 'TECNO[ _]F4 Pro(?:[);/ ]|$)'
@@ -15250,7 +15252,7 @@ Tecno Mobile:
       model: 'Camon 12 Air'
     - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
       model: 'Camon 12'
-    - regex: 'Tecno[ _](?:KC8|KC2j)(?:[);/ ]|$)'
+    - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
       model: 'Spark 4 Lite'
@@ -15259,8 +15261,12 @@ Tecno Mobile:
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
-    - regex: 'Tecno[ _]LB8'
+    - regex: 'Tecno[ _]LB8a?'
       model: 'Pouvoir 3 Plus'
+    - regex: 'Tecno[ _]KC3(?:[);/ ]|$)'
+      model: 'Camon 12 Air'
+    - regex: 'Tecno[ _]KC6(?:[);/ ]|$)'
+      model: 'Spark 4 Air'
     - regex: 'TECNO S9'
       device: 'phablet'
       model: 'S9'
