--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4561,7 +4561,7 @@ Datsun:
 
 # Danew
 Danew:
-  regex: 'Dslide ?([^;/]+) Build|Konnect_?(?:402|50[246]|60[127])|GEODROID_A5'
+  regex: 'Dslide ?([^;/]+) Build|Konnect_?(?:402|50[246]|60[127])|GEODROID_A5|Dslide ?(?:714|101[45]|1013QC)'
   device: 'smartphone'
   models:
     - regex: 'Konnect_?(402|50[246]|60[127])'
@@ -4572,6 +4572,9 @@ Danew:
     - regex: 'GEODROID_A5'
       device: 'tablet'
       model: 'Geodroid A5'
+    - regex: 'Dslide ?(714|1013QC|101[45])'
+      device: 'tablet'
+      model: 'Dslide $1'
 
 # Denver Electronics (denver-electronics.com)
 Denver:
@@ -9429,11 +9432,11 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|Web0S; Linux/SmartTV|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|VS820|VS870 4G|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05[DE]|L-03K|L-01[LJK]|L-52A|L-[45]1A|901LG|A001LG|80[12]LG|402LG|LGT32|L-02K|L-01F|LM-V40|DM-01K|LMX130IM'
+  regex: 'LG|Web0S; Linux/SmartTV|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|VS820|VS870 4G|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05[DE]|L-03K|L-01[LJK]|L-52A|L-[45]1A|901LG|A001LG|80[12]LG|402LG|LGT32|L-02K|L-01F|LM-V40|DM-01K|DM-02H|LMX130IM'
   device: 'smartphone'
   models:
-    - regex: 'DM-01K'
-      model: 'Disney Mobile DM-01K'
+    - regex: 'DM-(01K|02H)'
+      model: 'Disney Mobile DM-$1'
     - regex: 'LG-D325'
       model: 'L70'
     - regex: 'LG-D340F8'
@@ -9574,6 +9577,8 @@ LG:
       model: 'K40'
     - regex: 'LM-X430(?:[);/ ]|$)'
       model: 'K40S'
+    - regex: 'LM-K410'
+      model: 'K41S'
     - regex: 'LG-X220'
       model: 'K5'
     - regex: 'LM-X540'
